# ai-mais-server-setup

./: .gitignore  README.md  pyproject.toml  setup.py
conf/: .secrets.env.example
configs/: Caddyfile  authenticated-emails.txt  hermes-agent.service  oauth2-proxy.service
scripts/: build-hermes-graph.sh  export-hermes-corpus.py
src/: caddy.py  hermes.py  main.py  oauth2_proxy.py  secrets.py  utils.py
systemd/: hermes-agent.service  hermes-graphify-mcp.service  yandex-auth.service
yandex-auth/: auth.py  yandex-auth.service
